<resources>
    <string name="app_name">User Integration</string>

    <string name="enter_your_password">Enter Your Password</string>
    <string name="login">Login</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="enter_password">Enter Password</string>
    <string name="register">Register</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="name">Name :</string>
    <string name="email">Email :</string>
    <string name="dob">DOB :</string>
    <string name="password">Password :</string>
    <string name="user_integraction">User Integraction</string>

</resources>